main() and command line code moved into a separate file (nix-main.c)
Now muforth is callable more like a library. While it still uses global
variables (they are not encapsulated into a struct, like in Lua) at
least it's easier to embed muforth in something else, because it can be
compiled without a main() routine and with no reference to a command
line.

--- a/Makefile.in
+++ b/Makefile.in
@@ -25,7 +25,7 @@ COREOBJS=	kernel.o interpret.o dict.o mp-math.o engine-itc.o error.o
 
 # Platform objects
 ifeq (${MUPLAT},nix)
-PLATOBJS=	time.o tty.o select.o file.o
+PLATOBJS=	time.o tty.o select.o file.o nix-main.o
 PLATDEFS=	-DWITH_TIME
 endif
 
