BSD make is fully supported again!
Having discovered that I have BSD make on my Mac (as bsdmake) I decided
to make sure the recent changes I had made to the makefile could be made
compatible. The experience reminded me (once again!) how much better
faster and simpler BSD make is compared to GNU make. I hate GNU make!
I would feel better if you hated it too. ;-)

--- a/Makefile.in
+++ b/Makefile.in
@@ -21,13 +21,13 @@ ARCH_LD=	%archldflags%
 # Core objects
 COREOBJS=	kernel.o interpret.o dict.o mp-math.o engine-itc.o error.o
 		
--include platform.mk
+.sinclude "platform.mk"
 
 # Platform objects
-ifeq (${MUPLAT},nix)
+.if ${MUPLAT} == "nix"
 PLATOBJS=	time.o tty.o select.o file.o nix-main.o
 PLATDEFS=	-DWITH_TIME
-endif
+.endif
 
 # If any of these files changes, make a new version.h
 VERSOBJS=	${COREOBJS} ${PLATOBJS}
@@ -37,16 +37,16 @@ DEPFILES=	Makefile muforth.h env.h
 
 .PHONY: all clean httplink diffsed
 
-ifndef MUPLAT
+.ifndef MUPLAT
 all:
 	@echo "You need to define MUPLAT to build a specific platform."
 	@echo "Put the line"
 	@echo "   MUPLAT=<platform>"
 	@echo "where <platform> can be nix, embedded, or something else you"
 	@echo "define, into the file \"platform.mk\", and run make again."
-else
+.else
 all : public.h muforth
-endif
+.endif
 
 ${ALLOBJS} : ${DEPFILES}
 
