Removed -ansi from gcc command line
It caused more problems than it solved -- though it did allow me to find that
using mmap to allocate the dictionary isn't very portable. However, using mmap
to read files is less of a problem.

--- a/Makefile.in
+++ b/Makefile.in
@@ -10,7 +10,7 @@
 # Set by configure
 SEDEXT=		%sedext%
 
-CFLAGS=		-O2 -Wall -ansi -fomit-frame-pointer ${DEFS} ${ARCH_C} ${DEBUG}
+CFLAGS=		-O2 -Wall -fomit-frame-pointer ${DEFS} ${ARCH_C} ${DEBUG}
 LDFLAGS=	${ARCH_LD}
 DEFS=		-DCHUMOO ${PLATDEFS}
 ARCH_C=		%archcflags%
