On 64-bit machines, muforth is now 64-bit!
I cheat slightly, since addresses and data cells are the same length, but with
a few more changes (next checkin!) this will work on 32-bit machines too!
Woot!

--- a/Makefile.in
+++ b/Makefile.in
@@ -17,9 +17,10 @@ ARCH_C=		%archcflags%
 ARCH_LD=	%archldflags%
 #DEBUG=		-g -DDEBUG -DBEING_DEFINED
 #DEBUG=		-DDEBUG_TOKEN
+#DEBUG=		-DDEBUG_STACK
 
 # Core objects
-COREOBJS=	kernel.o interpret.o dict.o mp-math.o engine-itc.o error.o
+COREOBJS=	kernel.o interpret.o dict.o engine-itc.o error.o
 		
 # Platform definitions
 
@@ -113,8 +114,8 @@ dict.o : forth_chain.h compiler_chain.h
 	sed ${SEDEXT} -n \
 		-e '/^static /d' \
 		-e '/^#(if|else|endif)/p' \
-		-e 's/^([a-z]+ \**[a-z_0-9]+)\((void)?\).*$$/\1(void);/p' \
-		-e 's/^CODE\(([a-z_0-9]+)\)$$/extern pw p_\1;/p' \
+		-e 's/^([a-z]+ \**[a-zA-Z_0-9]+)\((void)?\).*$$/\1(void);/p' \
+		-e 's/^CODE\(([a-zA-Z_0-9]+)\)$$/extern pw p_\1;/p' \
 		${.IMPSRC}; \
 	echo) > ${.TARGET}
 
