Now 32-bit platforms run with 64-bit data!
I had to kludge a few things, but it works great.

--- a/Makefile.in
+++ b/Makefile.in
@@ -10,14 +10,15 @@
 # Set by configure
 SEDEXT=		%sedext%
 
-CFLAGS=		-O2 -Wall -fomit-frame-pointer ${DEFS} ${ARCH_C} ${DEBUG}
+CFLAGS=		-O2 -Wall -fomit-frame-pointer ${DEFS} ${ARCH_C} ${DEBUG} ${QUIET}
 LDFLAGS=	${ARCH_LD}
 DEFS=		-DCHUMOO ${PLATDEFS}
 ARCH_C=		%archcflags%
 ARCH_LD=	%archldflags%
 #DEBUG=		-g -DDEBUG -DBEING_DEFINED
-#DEBUG=		-DDEBUG_TOKEN
-#DEBUG=		-DDEBUG_STACK
+#DEBUG+=		-DDEBUG_TOKEN
+#DEBUG+=		-DDEBUG_STACK
+QUIET=		-Wno-int-to-pointer-cast -Wno-pointer-to-int-cast
 
 # Core objects
 COREOBJS=	kernel.o interpret.o dict.o engine-itc.o error.o
