Silence cast warnings on 32-bit hosts

--- a/Makefile.in
+++ b/Makefile.in
@@ -10,7 +10,7 @@
 # Set by configure
 SEDEXT=		%sedext%
 
-CFLAGS=		-O2 -Wall -fomit-frame-pointer ${DEFS} ${ARCH_C} ${DEBUG} ${QUIET}
+CFLAGS=		-O2 -Wall -fomit-frame-pointer ${DEFS} ${ARCH_C} ${DEBUG}
 LDFLAGS=	${ARCH_LD}
 DEFS=		-DCHUMOO ${PLATDEFS}
 ARCH_C=		%archcflags%
@@ -18,7 +18,6 @@ ARCH_LD=	%archldflags%
 #DEBUG=		-g -DDEBUG -DBEING_DEFINED
 #DEBUG+=		-DDEBUG_TOKEN
 #DEBUG+=		-DDEBUG_STACK
-QUIET=		-Wno-int-to-pointer-cast -Wno-pointer-to-int-cast
 
 # Core objects
 COREOBJS=	kernel.o interpret.o dict.o engine-itc.o error.o
