Fixed dependency of .asm files on Makefile

--- a/Makefile.in
+++ b/Makefile.in
@@ -16,10 +16,11 @@ DEFS=		-DCHUMOO ${PLATDEFS}
 ARCH_C=		%archcflags%
 ARCH_LD=	%archldflags%
 #DEBUG=		-g -DDEBUG -DBEING_DEFINED
-#DEBUG=		-DDEBUG_TOKEN
+#DEBUG+=		-DDEBUG_TOKEN
+#DEBUG+=		-DDEBUG_STACK
 
 # Core objects
-COREOBJS=	kernel.o interpret.o dict.o mp-math.o engine-itc.o error.o
+COREOBJS=	kernel.o interpret.o dict.o engine-itc.o error.o
 		
 # Platform definitions
 
@@ -76,8 +77,6 @@ platform.mk :
 
 ${ALLOBJS} : ${DEPFILES}
 
-${ALLOBJS:.o=.ph} : $(makefiles)
-
 muforth.o : version.h
 
 public.h : ${ALLOBJS:.o=.ph}
@@ -107,14 +106,16 @@ dict.o : forth_chain.h compiler_chain.h
 
 .SUFFIXES : .ph .asm
 
-.c.ph : $(makefiles)
+${ALLOBJS:.o=.ph} : $(makefiles)
+
+.c.ph :
 	@echo Making ${.TARGET}
 	@(echo "/* ${.IMPSRC} */"; \
 	sed ${SEDEXT} -n \
 		-e '/^static /d' \
 		-e '/^#(if|else|endif)/p' \
-		-e 's/^([a-z]+ \**[a-z_0-9]+)\((void)?\).*$$/\1(void);/p' \
-		-e 's/^CODE\(([a-z_0-9]+)\)$$/extern pw p_\1;/p' \
+		-e 's/^([a-z]+ \**[a-zA-Z_0-9]+)\((void)?\).*$$/\1(void);/p' \
+		-e 's/^CODE\(([a-zA-Z_0-9]+)\)$$/extern pw p_\1;/p' \
 		${.IMPSRC}; \
 	echo) > ${.TARGET}
 
@@ -135,7 +136,10 @@ muforth : ${ALLOBJS} ${DEPFILES}
 muforth-bare : ${ALLOBJS} ${DEPFILES}
 	${CC} ${LDFLAGS} -nodefaultlibs -o ${.TARGET} ${ALLOBJS} ${LIBS}
 
-.c.asm : $(makefiles) muforth.h
+
+${ALLOBJS:.o=.asm} : $(makefiles) muforth.h
+
+.c.asm :
 	${CC} ${CFLAGS} -S -o ${.TARGET} -c ${.IMPSRC}
 
 clean :
