.ph and .asm files get improved dependency tracking
I had assumed that suffix rules - .c.asm eg - paid attention to their
dependencies. Not so. I've made separate rules for .ph and .asm files so
they get remade when they should.

--- a/Makefile.in
+++ b/Makefile.in
@@ -7,8 +7,6 @@
 ### Makefile for muforth, a "micro" Forth
 ###
 
-#CC=	clang
-
 # Set by configure
 SEDEXT=		%sedext%
 
@@ -110,7 +108,9 @@ dict.o : forth_chain.h compiler_chain.h
 
 .SUFFIXES : .ph .asm
 
-.c.ph : $(makefiles)
+${ALLOBJS:.o=.ph} : $(makefiles)
+
+.c.ph :
 	@echo Making ${.TARGET}
 	@(echo "/* ${.IMPSRC} */"; \
 	sed ${SEDEXT} -n \
@@ -138,7 +138,9 @@ muforth : ${ALLOBJS} ${DEPFILES}
 muforth-bare : ${ALLOBJS} ${DEPFILES}
 	${CC} ${LDFLAGS} -nodefaultlibs -o ${.TARGET} ${ALLOBJS} ${LIBS}
 
-.c.asm : $(makefiles) muforth.h
+${ALLOBJS:.o=.asm} : $(DEPFILES)
+
+.c.asm :
 	${CC} ${CFLAGS} -S -o ${.TARGET} -c ${.IMPSRC}
 
 clean :
