Added nice digit (thousands, fourplexes) separators
Numbers - esp big ones - are much more readable.

Since I added yet another "tweakable" setting, I decided to overhaul
both the startup banner and the helpful info so the folks new to muforth
will know that there are some knobs they can turn to improve (hopefully)
their experience of muforth.

--- a/Makefile.in
+++ b/Makefile.in
@@ -129,6 +129,7 @@ version.h : $(makefiles) ${VERSOBJS}
 	@echo Making ${.TARGET}
 	@echo "#define BUILD_TIME `date \"+%s\"`" > version.h
 	@echo "#define BUILD_DATE \"`date \"+%Y-%b-%d %T %Z\"`\"" >> version.h
+	@echo "#define GIT_COMMIT \"`git rev-parse HEAD`\"" >> version.h
 
 muforth : ${ALLOBJS} ${DEPFILES}
 	${CC} ${LDFLAGS} -o ${.TARGET} ${ALLOBJS} ${LIBS}
