All objects depend on public.h again
But, thanks to a suggestion by Michael Pruemm, this doesn't mean that
everything is rebuilt all the time. Instead, the .ph files are cat'ed
into public.h.new and only if this _differs_ from the existing public.h
is it copied over. Thus public.h's timestamp changes - forcing a
recompile of _all_ .o files - only when it's contents have actually
changed.

If Make used a better dependency algorithm - like SHA1 hashes - to see
when files have changed, silly hacks like this would not be necessary.

--- a/Makefile.in
+++ b/Makefile.in
@@ -49,11 +49,11 @@ VERSOBJS=	${COREOBJS} ${PLATOBJS}
 
 ALLOBJS=	${VERSOBJS} muforth.o
 makefiles=	Makefile platform.mk
-DEPFILES=	$(makefiles) muforth.h env.h
+DEPFILES=	$(makefiles) muforth.h env.h public.h
 
 .PHONY: all clean httplink diffsed show-plat
 
-all : show-plat public.h muforth
+all : show-plat muforth
 
 show-plat :
 	@echo "====================================================================="
@@ -79,7 +79,14 @@ ${ALLOBJS} : ${DEPFILES}
 
 muforth.o : version.h
 
-public.h : ${ALLOBJS:.o=.ph}
+# Only make a new public.h - upon which _all_ .o files depend, and so will
+# _all_ be remade if it changes - if the contents are actually different from
+# the last run.
+
+public.h : public.h.new
+	cmp ${.IMPSRC} ${.TARGET} || mv ${.IMPSRC} ${.TARGET}
+
+public.h.new : ${ALLOBJS:.o=.ph}
 	@echo Making ${.TARGET}
 	@(echo "/* This file is automagically generated. Do not edit! */"; \
 	cat ${.ALLSRC}) > ${.TARGET}
