--- a/Makefile.in
+++ b/Makefile.in
@@ -20,7 +20,7 @@ ARCH_LD=	%archldflags%
 #DEBUG+=		-DDEBUG_STACK
 
 # Core objects
-COREOBJS=	kernel.o interpret.o dict.o engine-itc.o error.o
+COREOBJS=	kernel.o interpret.o dict.o engine-itc.o error.o muforth.o
 		
 # Platform definitions
 
@@ -44,10 +44,7 @@ PLATDEFS=	-DWITH_TIME
 PLATOBJS=	file.o main.o
 .endif
 
-# If any of these files changes, make a new version.h
-VERSOBJS=	${COREOBJS} ${PLATOBJS}
-
-ALLOBJS=	${VERSOBJS} muforth.o
+ALLOBJS=	${COREOBJS} ${PLATOBJS}
 makefiles=	Makefile platform.mk
 DEPFILES=	$(makefiles) muforth.h env.h public.h
 
@@ -84,10 +81,10 @@ muforth.o : version.h
 # the last run.
 
 public.h : public.h.new
-	cmp ${.IMPSRC} ${.TARGET} || mv ${.IMPSRC} ${.TARGET}
+	@echo Making ${.TARGET}
+	@cmp ${.IMPSRC} ${.TARGET} || mv ${.IMPSRC} ${.TARGET}
 
 public.h.new : ${ALLOBJS:.o=.ph}
-	@echo Making ${.TARGET}
 	@(echo "/* This file is automagically generated. Do not edit! */"; \
 	cat ${.ALLSRC}) > ${.TARGET}
 
@@ -132,7 +129,9 @@ env.h : envtest
 envtest : $(makefiles) envtest.c
 	${CC} ${CFLAGS} ${LDFLAGS} -o ${.TARGET} envtest.c
 
-version.h : $(makefiles) ${VERSOBJS}
+.PHONY : always
+
+version.h : always
 	@echo Making ${.TARGET}
 	@echo "#define BUILD_TIME `date \"+%s\"`" > version.h
 	@echo "#define BUILD_DATE \"`date \"+%Y-%b-%d %T %Z\"`\"" >> version.h
