For "nixed" platform, fake tty width

--- a/Makefile.in
+++ b/Makefile.in
@@ -42,6 +42,7 @@ PLATDEFS=	-DWITH_TIME
 .if ${MUPLATFORM} == "nixed"
 # Like nixy, but without time, tty, and select support.
 PLATOBJS=	file.o main.o
+PLATDEFS=	-DFAKE_TTY_WIDTH
 .endif
 
 ALLOBJS=	${COREOBJS} ${PLATOBJS}
