Copy rather than move public.h.new -> public.h
It's strange to sometimes have both files around, and sometimes not.
It's a small thing, but I thought it would be less confusing if both
were always around.

--- a/Makefile.in
+++ b/Makefile.in
@@ -83,7 +83,7 @@ muforth.o : version.h
 
 public.h : public.h.new
 	@echo Making ${.TARGET}
-	@cmp -s ${.IMPSRC} ${.TARGET} || mv ${.IMPSRC} ${.TARGET}
+	@cmp -s ${.IMPSRC} ${.TARGET} || cp -f ${.IMPSRC} ${.TARGET}
 
 public.h.new : ${ALLOBJS:.o=.ph}
 	@(echo "/* This file is automagically generated. Do not edit! */"; \
