muforth is back to being 32-bit cells by default
The build no longer officially supports 64-bit cells and pointers.
However, importantly, stacks and computations are still 64 bits wide.

The banner has been improved again.

And while I was fiddling with the Makefile I got it working with BSD
make again. ;-)

--- a/Makefile.in
+++ b/Makefile.in
@@ -18,6 +18,7 @@ ARCH_LD=	%archldflags%
 #DEBUG=		-g -DDEBUG -DBEING_DEFINED
 #DEBUG+=		-DDEBUG_TOKEN
 #DEBUG+=		-DDEBUG_STACK
+ENVTESTS=
 
 # Core objects
 COREOBJS=	kernel.o interpret.o dict.o engine-itc.o error.o muforth.o
@@ -83,7 +84,7 @@ muforth.o : version.h
 
 public.h : public.h.new
 	@echo Making ${.TARGET}
-	@cmp -s ${.IMPSRC} ${.TARGET} || cp -f ${.IMPSRC} ${.TARGET}
+	@cmp -s ${.ALLSRC} ${.TARGET} || cp -f ${.ALLSRC} ${.TARGET}
 
 public.h.new : ${ALLOBJS:.o=.ph}
 	@(echo "/* This file is automagically generated. Do not edit! */"; \
@@ -128,14 +129,15 @@ env.h : envtest
 	./envtest > ${.TARGET}
 
 envtest : $(makefiles) envtest.c
-	${CC} ${CFLAGS} ${LDFLAGS} -o ${.TARGET} envtest.c
+	${CC} ${CFLAGS} ${ENVTESTS} ${LDFLAGS} -o ${.TARGET} envtest.c
 
 .PHONY : always
+always : # to satisfy BSD make ;-)
 
 version.h : always
 	@echo Making ${.TARGET}
 	@echo "#define BUILD_TIME `date \"+%s\"`" > version.h
-	@echo "#define BUILD_DATE \"`date \"+%Y-%b-%d %T %Z\"`\"" >> version.h
+	@echo "#define BUILD_DATE \"`date \"+%Y-%b-%d %R\"`\"" >> version.h
 	@echo "#define GIT_COMMIT \"`git rev-parse HEAD`\"" >> version.h
 
 muforth : ${ALLOBJS} ${DEPFILES}
@@ -171,7 +173,7 @@ avr.img : target/AVR/loader.mu4 target/AVR/bitbang.mu4
 	./muforth -v -f target/AVR/loader.mu4 -f target/AVR/bitbang.mu4 bye
 
 avr : avr.img
-	avrdude -v -c stk500 -p t45 -P /dev/ttyS0 -U flash:w:${.IMPSRC}:r
+	avrdude -v -c stk500 -p t45 -P /dev/ttyS0 -U flash:w:${.ALLSRC}:r
 
 # install Vim bits
 install-vim :
