Added painfully rudimentary USB support, using libusb-0.1
Linux sucks.

If the documentation for Linux were better, I _might_ consider adding
USB support to muforth myself. As it stands, the docs I found at
linux-usb.org were so outdated (dating from 2000 or thereabouts) it
would have been funny if it wasn't so tragic.

At least on OSX and BSDs there is good documentation! I may add support
for these "by hand" later.

Esp since libusb-0.1.12 doesn't even want to build on Darwin. Lame.

--- a/Makefile.in
+++ b/Makefile.in
@@ -38,6 +38,12 @@ WARNPLATFORM=	yes
 # This is the "standard" Unix-y platform.
 PLATOBJS=	time.o tty.o select.o file.o main.o
 PLATDEFS=	-DWITH_TIME
+.if %libusb% != "none"
+HAVE_USB=yes
+PLATOBJS+=	usb.o
+LIBUSB_LD=	-lusb -L%libusb%/lib -Wl,-rpath,%libusb%/lib
+LIBUSB_CC=	-I%libusb%/include
+.endif
 .endif
 
 .if ${MUPLATFORM} == "nixed"
@@ -52,7 +58,7 @@ DEPFILES=	$(makefiles) muforth.h env.h public.h
 
 .PHONY: all clean httplink diffsed show-plat
 
-all : show-plat muforth
+all : show-plat show-usb muforth
 
 show-plat :
 	@echo "====================================================================="
@@ -67,6 +73,14 @@ show-plat :
 	@echo "Then run make again."
 	@echo
 .endif
+
+show-usb :
+.ifdef HAVE_USB
+	@echo "Building USB support with libusb found in %libusb%/lib."
+.else
+	@echo "No libusb was found. muFORTH will build without USB support."
+.endif
+	@echo
 
 # If platform.mk doesn't exist, create it. Since all the .ph and object files
 # depend on it, if it doesn't exist they will get remade every time!
@@ -141,10 +155,13 @@ version.h : always
 	@echo "#define GIT_COMMIT \"`git rev-parse HEAD`\"" >> version.h
 
 muforth : ${ALLOBJS} ${DEPFILES}
-	${CC} ${LDFLAGS} -o ${.TARGET} ${ALLOBJS} ${LIBS}
+	${CC} ${LDFLAGS} ${LIBUSB_LD} -o ${.TARGET} ${ALLOBJS} ${LIBS}
 
 muforth-bare : ${ALLOBJS} ${DEPFILES}
 	${CC} ${LDFLAGS} -nodefaultlibs -o ${.TARGET} ${ALLOBJS} ${LIBS}
+
+usb.o : usb.c ${DEPFILES}
+	${CC} ${CFLAGS} ${LIBUSB_CC} -o ${.TARGET} -c ${.IMPSRC}
 
 ${ALLOBJS:.o=.asm} : $(DEPFILES)
 
