Removed dependency on libusb!!
muforth now has (very basic) USB support for Linux and OSX.

By losing libusb, I've lost other platforms, such as the other BSDs:
Free, Net, and Open. I may add this later... but it won't be a huge
priority unless I find myself doing HC08 development on BSD - not a
totally unlikely scenario, given my growing disgust with Linux.

I could complain bitterly about how lame Linux's user-space USB support
is, but I'm too hungry to do it right now.

Concomitant with this change is a simplification of "arch-specific"
make/configure stuff. Now all arch-specific amendments go into an
arch.mk file which is pulled in by the main Makefile, kinda the way
platform.mk works. Not sure why I didn't do this sooner; sedding those
weird %variable% things was ugly.

--- a/Makefile.in
+++ b/Makefile.in
@@ -7,14 +7,12 @@
 ### Makefile for muforth, a "micro" Forth
 ###
 
-# Set by configure
-SEDEXT=		%sedext%
+# Pull in architecture-specific settings from configure.sh
+.include "arch.mk"
 
 CFLAGS=		-O2 -Wall -fomit-frame-pointer ${DEFS} ${ARCH_C} ${DEBUG}
 LDFLAGS=	${ARCH_LD}
 DEFS=		-DCHUMOO ${PLATDEFS}
-ARCH_C=		%archcflags%
-ARCH_LD=	%archldflags%
 #DEBUG=		-g -DDEBUG -DBEING_DEFINED
 #DEBUG+=		-DDEBUG_TOKEN
 #DEBUG+=		-DDEBUG_STACK
@@ -36,15 +34,8 @@ WARNPLATFORM=	yes
 
 .if ${MUPLATFORM} == "nixy"
 # This is the "standard" Unix-y platform.
-PLATOBJS=	time.o tty.o select.o file.o main.o usb.o
+PLATOBJS=	time.o tty.o select.o file.o main.o
 PLATDEFS=	-DWITH_TIME
-.if %libusb% != "none"
-USB_CC=		-I%libusb%/include
-USB_LD=		-lusb -L%libusb%/lib -Wl,-rpath,%libusb%/lib
-.else
-USB_CC=		-DUSE_IOKIT
-USB_LD=		-framework CoreFoundation -framework IOKit
-.endif
 .endif
 
 .if ${MUPLATFORM} == "nixed"
@@ -53,13 +44,13 @@ PLATOBJS=	file.o main.o
 PLATDEFS=	-DFAKE_TTY_WIDTH
 .endif
 
-ALLOBJS=	${COREOBJS} ${PLATOBJS}
+ALLOBJS=	${COREOBJS} ${PLATOBJS} ${ARCHOBJS}
 makefiles=	Makefile platform.mk
 DEPFILES=	$(makefiles) muforth.h env.h public.h
 
 .PHONY: all clean httplink diffsed show-plat
 
-all : show-plat show-usb muforth
+all : show-plat muforth
 
 show-plat :
 	@echo "====================================================================="
@@ -74,8 +65,6 @@ show-plat :
 	@echo "Then run make again."
 	@echo
 .endif
-
-show-usb :
 
 # If platform.mk doesn't exist, create it. Since all the .ph and object files
 # depend on it, if it doesn't exist they will get remade every time!
@@ -154,9 +143,6 @@ muforth : ${ALLOBJS} ${DEPFILES}
 
 muforth-bare : ${ALLOBJS} ${DEPFILES}
 	${CC} ${LDFLAGS} -nodefaultlibs -o ${.TARGET} ${ALLOBJS} ${LIBS}
-
-usb.o : usb.c ${DEPFILES}
-	${CC} ${CFLAGS} ${USB_CC} -o ${.TARGET} -c ${.IMPSRC}
 
 ${ALLOBJS:.o=.asm} : $(DEPFILES)
 
