--- a/Makefile.in
+++ b/Makefile.in
@@ -34,13 +34,13 @@ WARNPLATFORM=	yes
 
 .if ${MUPLATFORM} == "nixy"
 # This is the "standard" Unix-y platform.
-PLATOBJS=	time.o tty.o select.o file.o main.o
+PLATOBJS=	time.o tty.o select.o file.o main.o lfsr.o
 PLATDEFS=	-DWITH_TIME
 .endif
 
 .if ${MUPLATFORM} == "nixed"
 # Like nixy, but without time, tty, and select support.
-PLATOBJS=	file.o main.o
+PLATOBJS=	file.o main.o lfsr.o
 PLATDEFS=	-DFAKE_TTY_WIDTH
 .endif
 
