Simplified path handling: absolute or relative to muforth build dir
Now, instead of having a "path search", instead we simply use absolute
paths (starting with "/") unchanged, and prefix the build directory to
all other paths. This makes file handling much simpler and more robust.

--- a/Makefile.in
+++ b/Makefile.in
@@ -74,7 +74,7 @@ platform.mk :
 
 ${ALLOBJS} : ${DEPFILES}
 
-muforth.o : version.h
+muforth.o file.o : version.h
 
 # Only make a new public.h - upon which _all_ .o files depend, and so will
 # _all_ be remade if it changes - if the contents are actually different from
@@ -136,6 +136,7 @@ version.h : always
 	@echo Making ${.TARGET}
 	@echo "#define BUILD_TIME `date \"+%s\"`" > version.h
 	@echo "#define BUILD_DATE \"`date \"+%Y-%b-%d %R\"`\"" >> version.h
+	@echo "#define BUILD_DIR \"`pwd`\"" >> version.h
 
 muforth : ${ALLOBJS} ${DEPFILES}
 	${CC} ${LDFLAGS} -o ${.TARGET} ${ALLOBJS} ${LIBS}
