Made LFSR experiments optional
Now, to include them, you have to add the line

  WITH_LFSR=yes

to your platform.mk and re-make.

--- a/Makefile.in
+++ b/Makefile.in
@@ -27,6 +27,7 @@ COREOBJS=	kernel.o interpret.o dict.o engine-itc.o error.o muforth.o
 # MUPLATFORM, default it to something common and useful.
 
 .sinclude "platform.mk"
+
 .ifndef MUPLATFORM
 MUPLATFORM=	nixy
 WARNPLATFORM=	yes
@@ -34,17 +35,25 @@ WARNPLATFORM=	yes
 
 .if ${MUPLATFORM} == "nixy"
 # This is the "standard" Unix-y platform.
-PLATOBJS=	time.o tty.o select.o file.o main.o lfsr.o
+PLATOBJS=	time.o tty.o select.o file.o main.o
 PLATDEFS=	-DWITH_TIME
 .endif
 
 .if ${MUPLATFORM} == "nixed"
 # Like nixy, but without time, tty, and select support.
-PLATOBJS=	file.o main.o lfsr.o
+PLATOBJS=	file.o main.o
 PLATDEFS=	-DFAKE_TTY_WIDTH
 .endif
 
-ALLOBJS=	${COREOBJS} ${PLATOBJS} ${ARCHOBJS}
+# Optional bits
+OPTOBJS=
+
+.ifdef WITH_LFSR
+# Add the linear feedback shift register experiments
+OPTOBJS+=	lfsr.o
+.endif
+
+ALLOBJS=	${COREOBJS} ${PLATOBJS} ${ARCHOBJS} ${OPTOBJS}
 makefiles=	Makefile platform.mk
 DEPFILES=	$(makefiles) muforth.h env.h public.h
 
