Always do all envtests; prefix results with MU_

--- a/Makefile.in
+++ b/Makefile.in
@@ -16,7 +16,6 @@ DEFS=		-DCHUMOO ${PLATDEFS}
 #DEBUG=		-g -DDEBUG -DBEING_DEFINED
 #DEBUG+=		-DDEBUG_TOKEN
 #DEBUG+=		-DDEBUG_STACK
-ENVTESTS=
 
 # Core objects
 COREOBJS=	kernel.o interpret.o dict.o engine-itc.o error.o muforth.o
@@ -136,7 +135,7 @@ env.h : envtest
 	./envtest > ${.TARGET}
 
 envtest : $(makefiles) envtest.c
-	${CC} ${CFLAGS} ${ENVTESTS} ${LDFLAGS} -o ${.TARGET} envtest.c
+	${CC} ${CFLAGS} ${LDFLAGS} -o ${.TARGET} envtest.c
 
 .PHONY : always
 always : # to satisfy BSD make ;-)
