--- a/Makefile.in
+++ b/Makefile.in
@@ -158,7 +158,7 @@ ${ALLOBJS:.o=.asm} : $(DEPFILES)
 	${CC} ${CFLAGS} -S -o ${.TARGET} -c ${.IMPSRC}
 
 clean :
-	rm -f muforth version.h *.o *.asm env.h envtest
+	rm -f muforth muforth32 muforth64 version.h *.o *.asm env.h envtest
 	rm -f *.ph public.h forth_chain.h compiler_chain.h
 	rm -f image.*
 
