Can build without serial support: platform nixy-noserial
Not a big deal, but removes a few words from the kernel - things dealing
with baud rates, flushing queues, and also the select support (which is
in muforth, as far as I'm concerned, _solely_ to enable the building of
simple "terminal emulators" to talk to old-skool target boards (such as
ARM's AEB-1 and New Micros' V25) that have serial "monitor" programs
that are intended for interaction with humans, rather than machines.

--- a/Makefile.in
+++ b/Makefile.in
@@ -35,6 +35,12 @@ WARNPLATFORM=	yes
 .if ${MUPLATFORM} == "nixy"
 # This is the "standard" Unix-y platform.
 PLATOBJS=	time.o tty.o select.o file.o main.o
+PLATDEFS=	-DWITH_TIME -DTTY_SERIAL
+.endif
+
+.if ${MUPLATFORM} == "nixy-noserial"
+# This is the "standard" Unix-y platform.
+PLATOBJS=	time.o tty.o file.o main.o
 PLATDEFS=	-DWITH_TIME
 .endif
 
