touch local.mk if it doesn't exist
otherwise make will complain

--- a/Makefile.in
+++ b/Makefile.in
@@ -40,6 +40,11 @@ DEPFILES=	$(makefiles) muforth.h env.h public.h
 
 all : muforth
 
+# Since everyting depends on local.mk, let's make one if it doesn't exist
+# already.
+local.mk :
+	touch ${.TARGET}
+
 ${ALLOBJS} : ${DEPFILES}
 
 muforth.o file.o : version.h
