Easier to set up DEBUG for BEING_DEFINED

--- a/Makefile.in
+++ b/Makefile.in
@@ -18,6 +18,7 @@ CFLAGS=		-O2 -Wall -fomit-frame-pointer ${DEFS} ${ARCH_C} ${DEBUG}
 LDFLAGS=	${ARCH_LD}
 DEFS=		-DCHUMOO
 #DEBUG=		-g -DDEBUG -DBEING_DEFINED
+#DEBUG+=		-DBEING_DEFINED
 #DEBUG+=		-DDEBUG_TOKEN
 #DEBUG+=		-DDEBUG_STACK
 
