Keep muforth* executables in src/; symlink from mu/

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -39,7 +39,7 @@ DEPFILES=	$(makefiles) muforth.h env.h public.h
 
 .PHONY: all clean httplink diffsed
 
-all : ../mu/muforth
+all : muforth
 
 # Since everyting depends on local.mk, let's make one if it doesn't exist
 # already.
@@ -112,10 +112,10 @@ version.h : always
 	@echo "#define BUILD_DATE \"`date \"+%Y-%b-%d %R\"`\"" >> version.h
 	@echo "#define MU_DIR     \"${MUDIR}\"" >> version.h
 
-../mu/muforth : ${ALLOBJS} ${DEPFILES}
+muforth : ${ALLOBJS} ${DEPFILES}
 	${CC} ${LDFLAGS} -o ${.TARGET} ${ALLOBJS} ${LIBS}
 
-../mu/muforth-bare : ${ALLOBJS} ${DEPFILES}
+muforth-bare : ${ALLOBJS} ${DEPFILES}
 	${CC} ${LDFLAGS} -nodefaultlibs -o ${.TARGET} ${ALLOBJS} ${LIBS}
 
 ${ALLOBJS:.o=.asm} : $(DEPFILES)
@@ -124,7 +124,8 @@ ${ALLOBJS:.o=.asm} : $(DEPFILES)
 	${CC} ${CFLAGS} -S -o ${.TARGET} -c ${.IMPSRC}
 
 clean :
-	rm -f ../mu/muforth ../mu/muforth32 ../mu/muforth64 version.h *.o *.asm env.h envtest
+	rm -f muforth muforth32 muforth64
+	rm -f version.h *.o *.asm env.h envtest
 	rm -f *.ph public.h forth_chain.h compiler_chain.h
 	rm -f image.*
 
