forth_chain.h and compiler_chain.h should depend on makefiles

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -62,7 +62,7 @@ public.h.new : ${ALLOBJS:.o=.ph}
 	@(echo "/* This file is automagically generated. Do not edit! */"; \
 	cat ${.ALLSRC}) > ${.TARGET}
 
-forth_chain.h : public.h ../scripts/gen_dict_chain.sed
+forth_chain.h : public.h ../scripts/gen_dict_chain.sed $(makefiles)
 	@echo Making ${.TARGET}
 	@(echo "/* This file is automagically generated. Do not edit! */"; \
 	sed ${SEDEXT} \
@@ -70,7 +70,7 @@ forth_chain.h : public.h ../scripts/gen_dict_chain.sed
 		-f ../scripts/gen_dict_chain.sed public.h \
 	) > ${.TARGET}
 
-compiler_chain.h : public.h ../scripts/gen_dict_chain.sed
+compiler_chain.h : public.h ../scripts/gen_dict_chain.sed $(makefiles)
 	@echo Making ${.TARGET}
 	@(echo "/* This file is automagically generated. Do not edit! */"; \
 	sed ${SEDEXT} \
