configure.sh generates config.h instead of -DHAS_FOO in cflags
Neater compiles. Just simpler and better all around.

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -14,9 +14,8 @@
 # (eg, WITH_LFSR)
 .sinclude "local.mk"
 
-CFLAGS=		-O2 -Wall -fomit-frame-pointer ${DEFS} ${ARCH_C} ${DEBUG}
+CFLAGS=		-O2 -Wall -fomit-frame-pointer ${ARCH_C} ${DEBUG}
 LDFLAGS=	${ARCH_LD}
-DEFS=		-DCHUMOO
 #DEBUG=		-g -DDEBUG -DBEING_DEFINED
 #DEBUG+=		-DBEING_DEFINED
 #DEBUG+=		-DDEBUG_TOKEN
@@ -35,7 +34,7 @@ OPTOBJS+=	lfsr.o
 
 ALLOBJS=	${COREOBJS} ${ARCHOBJS} ${OPTOBJS}
 makefiles=	Makefile arch.mk local.mk
-DEPFILES=	$(makefiles) muforth.h env.h public.h
+DEPFILES=	$(makefiles) config.h muforth.h env.h public.h
 
 .PHONY: all clean httplink diffsed
 
