--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -34,7 +34,7 @@ OPTOBJS+=	lfsr.o
 
 ALLOBJS=	${COREOBJS} ${ARCHOBJS} ${OPTOBJS}
 makefiles=	Makefile arch.mk local.mk
-DEPFILES=	$(makefiles) config.h muforth.h env.h public.h
+DEPFILES=	$(makefiles) muforth.h env.h public.h
 
 .PHONY: all clean httplink diffsed
 
