--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -19,6 +19,7 @@ LDFLAGS=	${ARCH_LD}
 #DEBUG+=		-DBEING_DEFINED
 #DEBUG+=		-DDEBUG_TOKEN
 #DEBUG+=		-DDEBUG_STACK
+#DEBUG+=		-DDEBUG_USB_ENUMERATION
 
 # Core objects
 COREOBJS=	kernel.o engine-itc.o interpret.o dict.o error.o muforth.o
