--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -22,7 +22,7 @@ LDFLAGS=	${ARCH_LD}
 #DEBUG+=		-DDEBUG_USB_ENUMERATION
 
 # Core objects
-COREOBJS=	kernel.o engine-itc.o interpret.o dict.o error.o muforth.o
+COREOBJS=	kernel.o engine-itc.o interpret.o dict.o error.o
 
 # Optional bits
 OPTOBJS=
@@ -32,7 +32,9 @@ OPTOBJS=
 OPTOBJS+=	lfsr.o
 .endif
 
-ALLOBJS=	${COREOBJS} ${ARCHOBJS} ${OPTOBJS}
+# version.h depends on ${VERSOBJS), and muforth.o depends on version.h
+VERSOBJS=	${COREOBJS} ${ARCHOBJS} ${OPTOBJS}
+ALLOBJS=	${VERSOBJS} muforth.o
 makefiles=	Makefile arch.mk local.mk
 DEPFILES=	$(makefiles) muforth.h env.h public.h
 
@@ -47,17 +49,19 @@ local.mk :
 
 ${ALLOBJS} : ${DEPFILES}
 
-muforth.o file.o : version.h
-
 # Only make a new public.h - upon which _all_ .o files depend, and so will
 # _all_ be remade if it changes - if the contents are actually different from
 # the last run.
 
-public.h : public.h.new
-	@echo Making ${.TARGET}
-	@cmp -s ${.ALLSRC} ${.TARGET} || cp -f ${.ALLSRC} ${.TARGET}
+public.h : .public.h
+	@if cmp -s ${.ALLSRC} ${.TARGET} ; then \
+		echo No changes to ${.TARGET} ; \
+	else \
+		echo Making ${.TARGET} ; \
+		cp -f ${.ALLSRC} ${.TARGET} ; \
+	fi
 
-public.h.new : ${ALLOBJS:.o=.ph}
+.public.h : ${ALLOBJS:.o=.ph}
 	@(echo "/* This file is automagically generated. Do not edit! */"; \
 	cat ${.ALLSRC}) > ${.TARGET}
 
@@ -102,14 +106,18 @@ env.h : envtest
 envtest : $(makefiles) envtest.c
 	${CC} ${CFLAGS} ${LDFLAGS} -o ${.TARGET} envtest.c
 
-.PHONY : always
-always : # to satisfy BSD make ;-)
+muforth.o : version.h
 
-version.h : always
+version.h : ${VERSOBJS}
 	@echo Making ${.TARGET}
-	@echo "#define BUILD_TIME `date \"+%s\"`" > version.h
-	@echo "#define BUILD_DATE \"`date \"+%Y-%b-%d %R\"`\"" >> version.h
-	@echo "#define MU_DIR     \"${MUDIR}\"" >> version.h
+	@echo "#define BUILD_TIME `date \"+%s\"`" > ${.TARGET}
+	@echo "#define BUILD_DATE \"`date \"+%Y-%b-%d %R\"`\"" >> ${.TARGET}
+
+file.o : muhome.h
+
+muhome.h : ${makefiles}
+	@echo Making ${.TARGET}
+	@echo "#define MU_DIR \"${MU_DIR}\"" > ${.TARGET}
 
 muforth : ${ALLOBJS} ${DEPFILES}
 	${CC} ${LDFLAGS} -o ${.TARGET} ${ALLOBJS} ${LIBS}
@@ -124,8 +132,8 @@ ${ALLOBJS:.o=.asm} : $(DEPFILES)
 
 clean :
 	rm -f muforth muforth32 muforth64
-	rm -f version.h *.o *.asm env.h envtest
-	rm -f *.ph public.h forth_chain.h compiler_chain.h
+	rm -f version.h muhome.h *.o *.asm env.h envtest
+	rm -f *.ph .public.h public.h forth_chain.h compiler_chain.h
 	rm -f image.*
 
 distclean : clean
