Fixed configure.sh and Makefile
Two things:

* Previous commit had an sh syntax error (when I added "support" for
  OpenBSD)

* OpenBSD's make doesn't have .sinclude

Both of these are fixed in this commit.

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -11,7 +11,8 @@
 
 # Read in local settings, such as C compiler settings, or optional inclusions
 # (eg, WITH_LFSR)
-.sinclude "local.mk"
+# .sinclude fails on OpenBSD!
+.include "local.mk"
 
 CFLAGS=		-O2 -Wall -fomit-frame-pointer ${ARCH_C} ${DEBUG}
 LDFLAGS=	${ARCH_LD}
@@ -41,11 +42,6 @@ DEPFILES=	$(makefiles) muforth.h env.h public.h
 .PHONY: all clean httplink diffsed
 
 all : muforth
-
-# Since everyting depends on local.mk, let's make one if it doesn't exist
-# already.
-local.mk :
-	touch ${.TARGET}
 
 ${ALLOBJS} : ${DEPFILES}
 
