src/.gitignore updated to properly ignore .h files

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -8,11 +8,12 @@ muforth64
 forth_chain.h
 compiler_chain.h
 version.h
+muhome.h
 Makefile
 env.h
 envtest
+.public.h
 public.h
-public.h.new
 arch.mk
 local.mk
 udev.nix
